# crisp-audio

./: .gitattributes  .gitignore  CHANGELOG.md  HISTORY.md  LICENSE  README.md  create_launcher.py  crisp.spec  enhanced_app.py  pyproject.toml  requirements.txt  setup_enhanced.py  test_imports.py
docs/: build_guide.py
installer/: crisp.iss
src/crisp/: __init__.py  __main__.py
src/crisp/core/: __init__.py  analyser.py  audio.py  audio_io.py  batch.py  dsp.py  engine.py  exporter.py  ffmpeg.py  presets.py  recorder.py
src/crisp/core/processors/: __init__.py  base.py  chorus.py  clarity.py  deplosive.py  dereverb.py  eq.py  loudness.py  noise.py  panner.py  trim.py  widener.py
src/crisp/gui/: __init__.py  app.py  main_window.py  player.py  settings_dialog.py  themes.py  waveform.py  widgets.py  workers.py
tests/: test_analyser.py  test_gui.py  test_io_export.py  test_pipeline.py  test_processors.py
