[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-audio"
version = "0.1.0"
description = "Record, clean, compare, and export voice audio — a self-contained desktop tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "sounddevice>=0.4.6",
    "noisereduce>=3.0",
    "pyloudnorm>=0.1.1",
    "pydub>=0.25.1",
    "imageio-ffmpeg>=0.4.9",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.3", "pytest>=8.0"]

[project.gui-scripts]
crisp = "crisp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
